--- a/style.css
+++ b/style.css
@@ -2,18 +2,19 @@
   box-sizing: border-box;
 }
 
+
+
 .button {
   width: 200px;
   height: 200px;
   background-color: white;
   font-size: 150px;
 
-
 }
 
 table {
   display: inline-block;
-  border: 2px solid purple;
+  /*border: 2px solid purple;*/
   width: 630px;
   height: 630px;
   float: right;
@@ -50,12 +51,30 @@ tr, td {
 
 .title {
   display: inline-block;
+  padding-top: 15%;
   padding-left: 15%;
   font-size: 60px;
   text-align: center;
   font-family: 'Amatic SC', cursive;
 }
 
-#reset {
-  font-size: 30px;
+.resetButton {
+  font-size: 20px;
+  letter-spacing: 2px;
+  font-family: 'Amatic SC', cursive;
+
+}
+
+.counter1 {
+
+}
+
+.counter2 {
+
+}
+
+.table {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
 }
