--- a/style.css
+++ b/style.css
@@ -3,29 +3,50 @@
 }
 
 
+body {
+  background-image: url("mountain.png");
+
+
+}
+
+#home{
+  position: absolute;
+  padding: 10px;
+  background-color:  black;
+  opacity: 0.6;
+  color: white;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+  margin-top: 3vh;
+  letter-spacing: .3em;
+
+
+
+}
 
 .button {
-  width: 200px;
-  height: 200px;
-  background-color: white;
+  width: 15vw;
+  height: 31vh;
+  background-color: rgba(255, 255, 255, 0.3);
   font-size: 150px;
+
 
 }
 
 table {
-  display: inline-block;
+  display: inline;
   /*border: 2px solid purple;*/
-  width: 630px;
-  height: 630px;
+  width: 50vw;
+  height: 50vh;
   float: right;
+
 }
 
 tr, td {
   border: 2px solid black;
-  width: 200px;
-  height: 200px;
-  background-color: white;
-
+  /*width: 10vw;*/
+  /*height: 32vh;*/
+  background-color: rgba(255, 255, 255, 0.3);
 
 }
 
@@ -40,6 +61,8 @@ tr, td {
   background-image: url('o2.jpg');
   background-repeat: no-repeat;
   background-position: center;
+  opacity: 0.5;
+
 
 }
 
@@ -47,15 +70,20 @@ tr, td {
   background-image: url('x3.png');
   background-repeat: no-repeat;
   background-position: center;
+  opacity: 0.5;
+
 }
 
 .title {
   display: inline-block;
-  padding-top: 15%;
-  padding-left: 15%;
-  font-size: 60px;
+  position: absolute;
+  left: 15vw;
+  bottom: 30vh;
+  font-size: 70px;
   text-align: center;
   font-family: 'Amatic SC', cursive;
+  font-weight: bolder;
+  background-color: rgba(255, 255, 255, 0.6);
 }
 
 .resetButton {
@@ -77,4 +105,72 @@ tr, td {
   display: inline-block;
   width: 50px;
   height: 50px;
+}
+
+@media (max-width: 500px) {
+
+  .body{
+    background-image: url("mountain2.png");
+
+    background-repeat: no-repeat;
+
+  }
+
+  #home {
+    margin-top: 1vh;
+    font-size: 0.7em;
+  }
+
+  .button {
+    position: relative;
+    display: inline-block;
+    width: 20vw;
+    height: 15vh;
+    background-color: rgba(255, 255, 255, 0.3);
+
+
+  }
+
+  table {
+    display: inline-block;
+    position: relative;
+    top: 10vh;
+    left: 15vw;
+    /*border: 2px solid purple;*/
+    width: 50vw;
+    height: 50vh;
+    float: none;
+
+  }
+  .o {
+
+
+  }
+
+  .x {
+
+  }
+
+  .title {
+    display: inline-block;
+    position: absolute;
+    left: 28vw;
+    bottom: 16vh;
+    font-size: 36px;
+    letter-spacing: .1em;
+    text-align: center;
+    font-family: 'Amatic SC', cursive;
+    font-weight: bolder;
+    background-color: rgba(255, 255, 255, 0.6);
+    height: 15vh;
+  }
+
+  .resetButton {
+    font-size: 20px;
+    letter-spacing: 2px;
+    font-family: 'Amatic SC', cursive;
+    background-color: rgba(255, 255, 255, 0.6);
+
+
+  }
 }
